--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --color-bg-btn-cloud: #f4f4fd;
   --color-bg-green: #31d0aa;
   --color-bg-dairy: #fcfcfc;
+  --color-bg-cornflower: #e7e9fc;
   /* Border colors */
   --color-border-cornflower: #e7e9fc;
   --color-border-light-slate: #8e8f99;
@@ -666,9 +667,30 @@ img {
 }
 
 .modal-btn {
-  display: block;
+  display: flex;
   margin-left: auto;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
+
+  width: 24px;
+  height: 24px;
+
+  color: var(--color-navy-blue-modal);
+  background-color: var(--color-bg-cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  transition-property: background-color, color;
+  transition-duration: var(--anim-base);
+  transition-timing-function: var(--anim-timing);
+  transition-delay: 0ms;
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--color-bg-hover-ocean);
+  color: var(--color-txt-white);
 }
 .modal-icon {
+  fill: currentColor;
 }
