--- a/css/styles.css
+++ b/css/styles.css
@@ -604,21 +604,23 @@ img {
 
   width: 100%;
   height: 100%;
-  padding-top: 40px;
+  padding: 40px 32px;
+  /* padding-top: 40px;
   padding-left: 34px;
-  padding-right: 34px;
+  padding-right: 34px; */
 
   display: flex;
   align-items: flex-start;
   justify-content: start;
 
   background-color: var(--color-bg-iris);
+  color: var(--color-txt-caption-cloud);
 
   transition: transform var(--anim-base) var(--anim-timing);
 }
 .portfolio-item:hover .portfolio-overlay,
 .portfolio-item:focus .portfolio-overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 .portfolio-overlay-lable {
   color: var(--color-txt-caption-cloud);
