--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,10 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.portfolio-item-link:hover .portfolio-overlay,
+.portfolio-item-link:focus .portfolio-overlay {
+  transform: translateY(0%);
+}
 /* 
 .portfolio-img {
 } 
@@ -618,9 +622,7 @@ img {
 
   transition: transform var(--anim-base) var(--anim-timing);
 }
-.portfolio-item:hover .portfolio-overlay {
-  transform: translateY(0%);
-}
+.portfolio-item:hover .portfolio-overlay,
 .portfolio-item:focus .portfolio-overlay {
   transform: translateY(0%);
 }
